[package]
name = "bython"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
config = "0.14.0"
crossbeam = "0.8.4"
rayon = "1.9.0"
regex = "1.10.3"
smol = "2.0.0"
