[package]
name = "bython"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
config = "0.14.0"
crossbeam = "0.8.4"
fern = "0.6.2"
flexi_logger = "0.28.0"
log = "0.4.21"
log4rs = "1.3.0"
rayon = "1.9.0"
regex = "1.10.3"
smol = "2.0.0"
thiserror = "1.0.58"
